# codex-threads

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  config.example.toml
.scratch/: annotations-design.md
scripts/: release.mjs
skills/codex-threads/: SKILL.md
skills/codex-threads-cli/: SKILL.md
smoke/: README.md  live_smoke.sh
src/: annotations.rs  app.rs  cli.rs  completion.rs  config.rs  debuglog.rs  errors.rs  lib.rs  rpc.rs  session.rs  time_filter.rs  turns.rs
src/tui/: events.rs  highlight.rs  input.rs  keymap.rs  mod.rs  prefs.rs  state.rs  views.rs
tests/: mock_smoke.rs  tui_pty_smoke.rs
