[package]
name = "codex-threads"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false

[[bin]]
name = "codex-threads"
path = "src/bin/codex-threads.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive", "env"] }
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-tungstenite = "0.29"
toml = "0.9.8"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tempfile = "3.23.0"
